Fix title not centered vertical

--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -79,6 +79,7 @@
     &__header {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       flex: 1 0 auto;
       position: relative;
       z-index: 10;
